Fixed file upload

--- a/CrawlerUI/templates/index.html
+++ b/CrawlerUI/templates/index.html
@@ -27,7 +27,7 @@
     <div class="row">
     <p class="flow text"><h3>Crawler Specifications</h3><font color="black"></p>
 
-      <form class="col s12" action="/crawl/" method="post" enctype="multipart/form-data> {% csrf_token %}
+      <form id="upload" class="col s12" action="/crawl/" method="post" enctype="multipart/form-data"> {% csrf_token %}
       <div class="row">
         <div class="file-field input-field col s6">
         <div class="btn">
