--- a/CrawlerUI/templates/index.html
+++ b/CrawlerUI/templates/index.html
@@ -196,6 +196,13 @@
 
 	                        </div>
 
+                            <div class="row">
+                                <div class="input-field col s4">
+	                                <input id="depth" name="depth" type="text" class="validate">
+	                                <label for="depth">Depth of the Crawl</label>
+	                            </div>
+
+                            </div>
                         	<center>
                            	 	<button class="btn waves-effect waves-light grey darken-3" type="submit" name="action">Submit
  	                           </button>
