added ui for result

--- a/CrawlerUI/templates/index.html
+++ b/CrawlerUI/templates/index.html
@@ -262,6 +262,11 @@
 	                                <input id="depth" name="depth" type="text" class="validate">
 	                                <label for="depth">Depth of the Crawl</label>
 	                            </div>
+<!--                              <div class="input-field col s4">
+                                  <input id="proxy-address" name="proxy-address" type="text" class="validate">
+                                  <label for="proxy-address">Proxy Address</label>
+                              </div>
+ -->
 
                             </div>
                         	<center>
@@ -299,10 +304,11 @@
                                     <td>{{ item.base_address }}</td>
                                     <td>{{ item.start_url }}</td>
                                     <td>{{ item.scope_urls }}</td>
-                                    <td>
-                                        <button class="use-address btn waves-effect waves-light" class="submit" name="action">Run</button>
-                                    </td>
-                                    <td><a href="getworkflow?id={{item.id}}">Workflow</a></td>
+                                    <!-- <td>
+                                        <button class="use-address btn waves-effect waves-light" class="submit" name="action">Get Workflow</button>
+                                    </td> -->
+                                    <td><a href="runcrawl?id={{item.id}}">Run Again</a></td>
+                                    <td><a href="getworkflow?id={{item.id}}">Execute Workflow</a></td>
 <!--                                     <td>
                                         <button class="get-workflow btn waves-effect waves-light" class="submit" name="action">Workflow</button>
                                     </td>
@@ -331,7 +337,7 @@
 
 
     			</li>
-  <div class="collapsible-header"> <a href="runcrawl">Show Graph</a>  </div>
+  <div class="collapsible-header"> <a href="graph">Show Graph</a>  </div>
 
           <li>
             
