--- a/CrawlerUI/templates/graph.html
+++ b/CrawlerUI/templates/graph.html
@@ -54,7 +54,7 @@ var force = d3.layout.force()
     .charge(-2000)
     .size([width, height]);
 
-d3.json("static/miserables.json", function(error, json) {
+d3.json("static/jsonDataFile.txt", function(error, json) {
   if (error) throw error;
 
   force
